--- a/app/src/main/res/layout/fragment_playing.xml
+++ b/app/src/main/res/layout/fragment_playing.xml
@@ -6,14 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PlayingFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="PlayingFragment" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tracklist_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/playlist_track_info_item"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
