--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,7 +190,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/playpause_button"
-
+                android:secondaryProgressTint="@android:color/holo_red_light"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
