--- a/app/src/main/res/layout/playlist_track_info_item.xml
+++ b/app/src/main/res/layout/playlist_track_info_item.xml
@@ -68,6 +68,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageButton
+            android:id="@+id/playStatusButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_pause_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="invisible"/>
+
+
 
         <CheckBox
             android:id="@+id/checkbox"
