--- a/app/src/main/res/layout/playlist_track_info_item.xml
+++ b/app/src/main/res/layout/playlist_track_info_item.xml
@@ -9,9 +9,10 @@
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="4dp">
 
         <LinearLayout
             android:id="@+id/line1"
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_weight="0"
                 android:layout_gravity="right"
+                android:paddingEnd="4dp"
                 />
         </LinearLayout>
 
@@ -72,10 +74,10 @@
             android:id="@+id/playStatusButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_pause_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="invisible"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_pause_24" />
 
 
 
