--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -22,8 +22,8 @@
         android:title="Sort Date: New"
         app:showAsAction="never"/>
 
-    <item android:id="@+id/action_settings"
-        android:title="Settings"
+    <item android:id="@+id/action_logout"
+        android:title="Logout"
         app:showAsAction="never"/>
 
 </menu>
