Completed track metadata model

--- a/app/src/main/res/layout/playlist_track_info_item.xml
+++ b/app/src/main/res/layout/playlist_track_info_item.xml
@@ -74,6 +74,7 @@
             android:id="@+id/playStatusButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="50dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
