--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,9 @@
         <action
             android:id="@+id/action_mainFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_trackPropertiesFragment"
+            app:destination="@id/trackPropertiesFragment" />
     </fragment>
     <fragment
         android:id="@+id/playingFragment"
@@ -80,6 +83,14 @@
             android:defaultValue="None"/>
         <action
             android:id="@+id/action_playlistFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trackPropertiesFragment"
+        android:name="com.example.ggmobileredux.ui.TrackPropertiesFragment"
+        android:label="TrackPropertiesFragment" >
+        <action
+            android:id="@+id/action_trackPropertiesFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
