Added updating and artist sorting

--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -21,4 +21,13 @@
     <item android:id="@+id/action_sort_date_added_newest"
         android:title="Sort Date: New"
         app:showAsAction="never"/>
+    <item android:id="@+id/action_sort_artist_az"
+        android:title="Sort Artist: a-z"
+        app:showAsAction="never"/>
+
+
+    <item android:id="@+id/action_update_tracks"
+        android:icon="@drawable/ic_refresh_24"
+        android:title="Update Library"
+        app:showAsAction="ifRoom"/>
 </menu>
